2006-03-11  Matthew Gregan  <kinetik@orcon.net.nz>

	* m4/prog_cxx_warnings.m4: Turn on extra warnings (-W) when using
	GCC.  Also disable 'unused variable' warnings (enabled by -W) for
	now.  This change only causes 8 new warnings (all of one
	type--signed vs unsigned) to occur.

	* netxx/peer.cxx, netxx/sockaddr.cxx, netxx/sockaddr.h: Correct
	the only six cases of type punning that occur (that GCC 4.1 can
	detect, at least) in C++ code we compile.  It is probably safe to
	remove -fno-strict-aliasing from CXXFLAGS now.

2006-03-11  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Fixed encoding.

2006-03-10  Richard Levitte  <richard@levitte.org>

	* po/fr.po: Small details to change.

2006-03-10  Matthew Gregan  <kinetik@orcon.net.nz>

	* ROADMAP: Remove items that have been done and correct a typo.

	* COPYING: Update FSF address.

	* po/fr.po: Fix up broken msgstrs that were causing msgmerge to
	choke.

2006-03-09  Richard Levitte  <richard@levitte.org>

	* po/fr.po: Finished almost all untranslated things.  I'm a
	bit tired...

2006-03-09  Richard Levitte  <richard@levitte.org>

	* po/fr.po: More translations done.

2006-03-09  Richard Levitte  <richard@levitte.org>

	* po/fr.po: More translations done.  Started using freedict
	services.

2006-03-09  Richard Levitte  <richard@levitte.org>

	* po/fr.po: More translations done.  Some new standard
	translations added.

2006-03-09  Richard Levitte  <richard@levitte.org>

	* po/fr.po: More translations done.  Note that I changed the
	translation "cert" -> "cert" to "cert" -> "certif" because I
	found a previous translation of the latter kind and liked it
	better.

2006-03-08  Richard Levitte  <richard@levitte.org>

	* po/fr.po: Translating more untranslated strings.

2006-03-08  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Traduce 2 new strings.

2006-03-08  Matt Johnston  <matt@ucc.asn.au>

	* monotone.texi: mention merge_into_dir in the pivot_root description.
